<resources>
    <string name="app_name">SotM Asia</string>
    <string name="website">https://stateofthemap.asia</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="fab_name">Add Note</string>
    <string name="day_one">30 November 2024</string>
    <string name="day_two">01 December 2024</string>

    <string name="about_text">This app that displays the main content of the event State of the Map Asia 2024, Coxs Bazar,Bangladesh.</string>
    <string name="imprint_text">The content of this app is provided by:</string>
    <string name="boil_name">Bangladesh Open Innovation Lab (BOIL)</string>
    <string name="boil_address01"> House 159, Level 4, Road 6, Block Ka </string>
    <string name="boil_address02"> PC Culture Housing Society </string>
    <string name="boil_address03"> Shyamoli, Dhaka 1207 </string>


    <string name="boil_mail">E-Mail:ask.bhoot@gmail.com</string>
    <string name="atik_name">Atikur Rahman</string>
    <string name="atik_mail">E-Mail:arahman.dcc2@@gmail.com</string>

    <string name="coc_01">The State of the Map Asia organizing team is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, age, or religion. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks.</string>
    <string name="coc_02">Harassment includes verbal comments that reinforce social structures of domination related to gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, age, religion; sexual images in public spaces; deliberate intimidation; stalking; following; harassing photography or recording; sustained disruption of talks or other events; inappropriate physical contact; and unwelcome sexual attention. Participants asked to stop any harassing behavior are expected to comply immediately.</string>
    <string name="coc_03">Exhibitors or similar actors are also subject to the anti-harassment policy. In particular, exhibitors should not use sexualized images, activities, or other material. Booth staff (including volunteers) should not use sexualized clothing, or otherwise create a sexualized environment.</string>
    <string name="coc_04">If a participant engages in harassing behavior, the conference organizers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund. If you are being harassed, notice that someone else is being harassed, or have any other concerns that you are unable to satisfactorily resolve amongst the person(s) involved, please contact a member of conference team immediately. Escalation to, and incident reporting by a small subset of conference team leaders will ensure that repeat offenders do not go unnoticed.</string>
    <string name="coc_05">The conference team will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</string>
    <string name="coc_06">We expect participants to follow these rules at all conference venues and conference-related social events.</string>
    <string name="coc_07">SotM Asia Wiki</string>

    <string name="help_accommodations01">There are a lot of 5 star to non-star Hotel Motels around the SotM Asia 2024 Venue. It cost 20 to more than 1000 dollars per night. Some hotels have their own online booking system and some hotels can be booked by 3rd party booking system. Also if anyone wants to book a hotel after reaching Cox’s Bazar he/she can. but it depends on the vacancy.</string>
    <string name="help_accommodations02">For any queries relating to accommodation, please contact Sawan Shahriar on +8801822844848 or sotmbd@gmail.com.</string>

    <string name="help_transportation01">The proposed venue is in the main hotel motel zone, making it within walking distance from any of the accommodations within the city. One can easily use the footpaths, beachways, and marine drives to get to the venue. The common and necessary local transportation options include CNG (tuk-tuks), rickshaws, and TomToms (electric buggies), which are particularly popular with tourists because of their accessibility and convenience. Bicycle and bike rental services are now also available in the city, but they are more to be used for exploring the picturesque marine drive and the different beaches throughout the coast.</string>
    <string name="help_v01">Dhaka is the capital city and center point in Bangladesh. It is connected every big cities by roads. Cox"'"s Bazar is the last district of the south in country. Bus,Train,Air all ways is connected Dhaka to Cox"'"s Bazar.</string>

    <string name="air01"> Hazrat Shahjalal International Airport: The main international airpor in Dhaka, Bangladesh.</string>
    <string name="air02">Cox"'"s Bazar Airport  is an domestic airport in the resort town of Cox"'"s Bazar in Bangladesh. The aerial distance between Dhaka and Cox"'"s Bazar is 309 kilometers. A flight from Dhaka (DAC) to Cox"'"s Bazar (CXB) takes about 1 hour and 12 minutes.</string>
    <string name="air03">Cox"'"s Bazar Airport is approx 3.5 Km distance between Vanue.</string>

    <string name="train01">Cox"'"s Bazar railway station : The main and only railway station in Cox"'"s Bazar. It is approx 8 Km distance between Vanue.</string>

    <string name="bus01">Sugondha Bus Stand: in Cox"'"s Bazar is approx 1 Km distance between Vanue.</string>
    <string name="bus02">Kolatoli Bus Stand: in Cox"'"s Bazar is approx 2 Km distance between Vanue.</string>
    <string name="bus03">Cox"'"s Bazar Central Bus Terminal: in Cox"'"s Bazar is approx 4.5 Km distance between Vanue.</string>
    <string name="bus04">Laldighi Bus Stand: in Cox"'"s Bazar is approx 2.5 Km distance between Vanue.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="internet">Please turn On your Internet for looking Program Schedule.</string>


</resources>